Fix broken canvas on Firefox
The browsers deal with fractional pixel style values differently, so
I just rounded the calculated values down to the nearest pixel and
adjusted the overall canvas size to accommodate this.

--- a/style.css
+++ b/style.css
@@ -13,5 +13,5 @@ h1 {
 
 .square {
     box-sizing: border-box;
-    border: 0.5px solid black;
+    border: 0.5px solid black
 }
